[gd_scene format=3 uid="uid://by5cctowpmoj1"]

[ext_resource type="Script" uid="uid://bydcpg7g3tgqy" path="res://chat_ui.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://bcibt73qths3g" path="res://shadcn_dark_theme.tres" id="2_theme"]
[ext_resource type="Texture2D" uid="uid://fup4askfu5jw" path="res://icons/panel-left.svg" id="3_panel_left"]
[ext_resource type="Texture2D" uid="uid://frq6tbuivoeo" path="res://icons/plus.svg" id="4_plus"]
[ext_resource type="Texture2D" uid="uid://snnghprukow5" path="res://icons/arrow-up.svg" id="5_arrow_up"]
[ext_resource type="Texture2D" uid="uid://3emq7tyli2fc" path="res://icons/share.svg" id="6_share"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_frame"]
bg_color = Color(0.0392157, 0.0392157, 0.0431373, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.164706, 0.164706, 0.180392, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sidebar"]
bg_color = Color(0.054902, 0.054902, 0.0588235, 1)
border_width_right = 1
border_color = Color(0.145098, 0.145098, 0.160784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_topbar_button"]
content_margin_left = 12.0
content_margin_top = 6.0
content_margin_right = 12.0
content_margin_bottom = 6.0
bg_color = Color(0.0705882, 0.0705882, 0.0784314, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.207843, 0.207843, 0.235294, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_input"]
bg_color = Color(0.0627451, 0.0627451, 0.0705882, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.192157, 0.192157, 0.219608, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[node name="ChatUI" type="Control" unique_id=1228982089]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="." unique_id=2037162137]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0313726, 0.0313726, 0.0352941, 1)

[node name="AppFrame" type="PanelContainer" parent="." unique_id=998836930]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_frame")

[node name="Body" type="HBoxContainer" parent="AppFrame" unique_id=1092705487]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Sidebar" type="PanelContainer" parent="AppFrame/Body" unique_id=606350008]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sidebar")

[node name="SidebarMargin" type="MarginContainer" parent="AppFrame/Body/Sidebar" unique_id=1561779776]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="SidebarBody" type="VBoxContainer" parent="AppFrame/Body/Sidebar/SidebarMargin" unique_id=391147318]
layout_mode = 2
theme_override_constants/separation = 12

[node name="AppTitle" type="Label" parent="AppFrame/Body/Sidebar/SidebarMargin/SidebarBody" unique_id=1332511903]
layout_mode = 2
theme_override_font_sizes/font_size = 33
text = "assistant-ui"

[node name="NewThread" type="Button" parent="AppFrame/Body/Sidebar/SidebarMargin/SidebarBody" unique_id=1351544119]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_topbar_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_topbar_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_topbar_button")
text = "+  New Thread"

[node name="Threads" type="VBoxContainer" parent="AppFrame/Body/Sidebar/SidebarMargin/SidebarBody" unique_id=842638024]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ThreadA" type="Button" parent="AppFrame/Body/Sidebar/SidebarMargin/SidebarBody/Threads" unique_id=872451097]
layout_mode = 2
text = "Understanding React Ho..."

[node name="ThreadB" type="Button" parent="AppFrame/Body/Sidebar/SidebarMargin/SidebarBody/Threads" unique_id=643617096]
layout_mode = 2
text = "Weather Inquiry for San ..."

[node name="ThreadC" type="Button" parent="AppFrame/Body/Sidebar/SidebarMargin/SidebarBody/Threads" unique_id=300538524]
layout_mode = 2
text = "Current Weather in San ..."

[node name="SidebarSpacer" type="Control" parent="AppFrame/Body/Sidebar/SidebarMargin/SidebarBody" unique_id=637757210]
layout_mode = 2
size_flags_vertical = 3

[node name="MainArea" type="VBoxContainer" parent="AppFrame/Body" unique_id=1781360278]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="TopBar" type="HBoxContainer" parent="AppFrame/Body/MainArea" unique_id=2112690690]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LeftActions" type="HBoxContainer" parent="AppFrame/Body/MainArea/TopBar" unique_id=275398066]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MenuButton" type="Button" parent="AppFrame/Body/MainArea/TopBar/LeftActions" unique_id=1078898513]
layout_mode = 2
flat = true

[node name="IconSprite" type="TextureRect" parent="AppFrame/Body/MainArea/TopBar/LeftActions/MenuButton" unique_id=295811557]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_panel_left")
expand_mode = 1
stretch_mode = 5

[node name="ModelSelect" type="OptionButton" parent="AppFrame/Body/MainArea/TopBar/LeftActions" unique_id=1720442737]
custom_minimum_size = Vector2(220, 34)
layout_mode = 2

[node name="TopSpacer" type="Control" parent="AppFrame/Body/MainArea/TopBar" unique_id=1009433821]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShareButton" type="Button" parent="AppFrame/Body/MainArea/TopBar" unique_id=897761089]
layout_mode = 2

[node name="IconSprite" type="TextureRect" parent="AppFrame/Body/MainArea/TopBar/ShareButton" unique_id=805397153]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.0
offset_top = -9.0
offset_right = 9.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("6_share")
expand_mode = 1
stretch_mode = 5

[node name="MainBody" type="MarginContainer" parent="AppFrame/Body/MainArea" unique_id=2093295161]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 16

[node name="ChatViewport" type="Control" parent="AppFrame/Body/MainArea/MainBody" unique_id=1951269133]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Scroll" type="ScrollContainer" parent="AppFrame/Body/MainArea/MainBody/ChatViewport" unique_id=1588702133]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -186.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="Center" type="CenterContainer" parent="AppFrame/Body/MainArea/MainBody/ChatViewport/Scroll" unique_id=1897114964]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Content" type="VBoxContainer" parent="AppFrame/Body/MainArea/MainBody/ChatViewport/Scroll/Center" unique_id=1967108327]
custom_minimum_size = Vector2(860, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 18

[node name="TopSpace" type="Control" parent="AppFrame/Body/MainArea/MainBody/ChatViewport/Scroll/Center/Content" unique_id=1439934131]
layout_mode = 2
size_flags_vertical = 3

[node name="Conversation" type="VBoxContainer" parent="AppFrame/Body/MainArea/MainBody/ChatViewport/Scroll/Center/Content" unique_id=501572625]
visible = false
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 10

[node name="WelcomeBlock" type="VBoxContainer" parent="AppFrame/Body/MainArea/MainBody/ChatViewport/Scroll/Center/Content" unique_id=55341311]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="AppFrame/Body/MainArea/MainBody/ChatViewport/Scroll/Center/Content/WelcomeBlock" unique_id=2091740609]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Hello there!"

[node name="Subtitle" type="Label" parent="AppFrame/Body/MainArea/MainBody/ChatViewport/Scroll/Center/Content/WelcomeBlock" unique_id=493493363]
layout_mode = 2
theme_override_colors/font_color = Color(0.631373, 0.631373, 0.666667, 1)
theme_override_font_sizes/font_size = 28
text = "How can I help you today?"

[node name="SuggestionFlow" type="HFlowContainer" parent="AppFrame/Body/MainArea/MainBody/ChatViewport/Scroll/Center/Content" unique_id=344161383]
layout_mode = 2
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12

[node name="SuggestionA" type="Button" parent="AppFrame/Body/MainArea/MainBody/ChatViewport/Scroll/Center/Content/SuggestionFlow" unique_id=1834394961]
layout_mode = 2
text = "What's the weather
in San Francisco?"

[node name="SuggestionB" type="Button" parent="AppFrame/Body/MainArea/MainBody/ChatViewport/Scroll/Center/Content/SuggestionFlow" unique_id=1668642300]
layout_mode = 2
text = "Explain React hooks
like useState and useEffect"

[node name="BottomGap" type="Control" parent="AppFrame/Body/MainArea/MainBody/ChatViewport/Scroll/Center/Content" unique_id=1218969794]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="InputPanel" type="PanelContainer" parent="AppFrame/Body/MainArea/MainBody/ChatViewport" unique_id=1774556170]
custom_minimum_size = Vector2(0, 170)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -430.0
offset_top = -170.0
offset_right = 430.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_input")

[node name="InputMargin" type="MarginContainer" parent="AppFrame/Body/MainArea/MainBody/ChatViewport/InputPanel" unique_id=1434442820]
layout_mode = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 14

[node name="InputBody" type="VBoxContainer" parent="AppFrame/Body/MainArea/MainBody/ChatViewport/InputPanel/InputMargin" unique_id=1737859593]
layout_mode = 2
theme_override_constants/separation = 12

[node name="MessageInput" type="TextEdit" parent="AppFrame/Body/MainArea/MainBody/ChatViewport/InputPanel/InputMargin/InputBody" unique_id=1539377153]
custom_minimum_size = Vector2(0, 92)
layout_mode = 2
placeholder_text = "Send a message..."

[node name="InputFooter" type="HBoxContainer" parent="AppFrame/Body/MainArea/MainBody/ChatViewport/InputPanel/InputMargin/InputBody" unique_id=1865380491]
layout_mode = 2

[node name="AttachButton" type="Button" parent="AppFrame/Body/MainArea/MainBody/ChatViewport/InputPanel/InputMargin/InputBody/InputFooter" unique_id=1038426561]
layout_mode = 2
flat = true

[node name="IconSprite" type="TextureRect" parent="AppFrame/Body/MainArea/MainBody/ChatViewport/InputPanel/InputMargin/InputBody/InputFooter/AttachButton" unique_id=1855980571]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_plus")
expand_mode = 1
stretch_mode = 5

[node name="FooterSpacer" type="Control" parent="AppFrame/Body/MainArea/MainBody/ChatViewport/InputPanel/InputMargin/InputBody/InputFooter" unique_id=1592245406]
layout_mode = 2
size_flags_horizontal = 3

[node name="SendButton" type="Button" parent="AppFrame/Body/MainArea/MainBody/ChatViewport/InputPanel/InputMargin/InputBody/InputFooter" unique_id=1240353203]
layout_mode = 2
flat = true

[node name="IconSprite" type="TextureRect" parent="AppFrame/Body/MainArea/MainBody/ChatViewport/InputPanel/InputMargin/InputBody/InputFooter/SendButton" unique_id=340379888]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_arrow_up")
expand_mode = 1
stretch_mode = 5
